src/test/deca/context/invalid/SansObjet/DeclVar-Minus-boolean-float-int.deca
// Description:
//    Declaration of a boolean variable using - operation between a float variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  1.5; 
    int y = 10; 
    boolean z = 1.5 - 10; 
}
